<resources>
    <string name="app_name">EasyGo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="app_title">EasyGo</string>
    <string name="btnBusiness">BUSINESS LOGIN</string>
    <string name="btnCustomer">CUSTOMER LOGIN</string>
    <string name="title_activity_login">Login</string>
    <string name="username_hint">Enter E-mail</string>
    <string name="password_hint">Enter Password</string>
    <string name="SignIn">Sign In</string>
    <string name="txtRegister">Register</string>
    <string name="txtForgotPassword">Forgot Password?</string>
    <string name="title_activity_shopping_home">ShoppingHome</string>
    <string name="title_activity_business_home">BusinessHome</string>
    <string name="user_welcome">Easy Go - Welcome, </string>
    <string name="shoppingOptions">Please choose from one of the options below:</string>
    <string name="startShopping">Start Shopping</string>
    <string name="loadShoppingCart">Load Shopping Cart</string>
    <string name="checkOut">Checkout</string>
    <string name="logOut">Log Out</string>
    <string name="title_activity_settings">Settings</string>
    <string name="settings">Settings</string>
    <string name="profile">My Profile</string>
    <string name="history">Shopping History</string>
    <string name="title_activity_profile">Profile</string>
    <string name="viewCart">View Cart</string>
    <string name="title_activity_shopping_items">ShoppingItemsActivity</string>
    <string name="productList">Product List</string>
    <string name="title_activity_product_details">ProductDetailsActivity</string>
    <string name="priceLabel">Price:</string>
    <string name="categoryLabel">Category:</string>
    <string name="unitsLabel">Units:</string>
    <string name="servingSize">Serving Size:</string>
    <string name="calories">Calories:</string>
    <string name="weight">Weight (kg):</string>
    <string name="quantity">Quantity:</string>
    <string name="valueHint">Enter Value</string>
    <string name="addToCart">Add To Cart</string>
    <string name="RemoveFromCart">Remove From Cart</string>
    <!--User Profile Starts-->

    <string name="txtUserPersonalInfo">Personal Information</string>
    <string name="txtUserName">User Name</string>
    <string name="useremail_hint">Email Address</string>
    <string name="userPhone_hint">Your Phone Number</string>
    <string name="txtUserApt">Apartment</string>
    <string name="txtUserProvience">Provience</string>
    <string name="txtUserStreet">Street</string>
    <string name="txtUserPostCode">Zip Code</string>
    <string name="txtUserCity">City</string>
    <string name="txtUserStore">Store Code</string>

    <string name="btnSave">Save Changes</string>


    <string name="profileInfoButtonSave">Save Personal Info</string>
    <string name="profileCardInfoButtonSave">Save Card Info</string>
    <string name="profileChangePassButtonSave">Changes Password</string>



    <string name="password_hint_old">Enter Old Password</string>
    <string name="password_hint_new">Enter New Password</string>
    <string name="password_hint_reNew">Re Enter New Password</string>


    <string name="payment_card_number_hint">Enter Card Number</string>
    <string name="payment_Card_Name_hint">Enter Name on Card</string>
    <string name="payment_security_Code_hint">Security Code</string>


    <string-array name="province">
        <item>Select Province</item>
        <item>Alberta</item>
        <item>Nunavut</item>
        <item>Northwest Territories</item>
        <item>Ontario</item>
        <item>British Columbia</item>
        <item>Saskatchewan</item>
        <item>Manitoba</item>
        <item>Newfoundland and Labrador</item>
        <item>New Brunswick</item>
        <item>Nova Scotia</item>
        <item>Prince Edward Island</item>
        <item>Quebec</item>
        <item>Yukon</item>

    </string-array>

    <string-array name="pay_method">
        <item>Select a Method of Pay</item>
        <item>Pay By PayPal</item>
        <item>Visa</item>
        <item>Mastercard</item>
        <item>American Express</item>
        <item>Capital One</item>
    </string-array>

    <!--Expire Month-->
    <string-array name="Exp_Month">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>

    <!--Expire Year-->
    <string-array name="Exp_Year">
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
        <item>2025</item>
        <item>2026</item>
    </string-array>

    <string name="title_activity_cart">CartActivity</string>
    <string name="productDetails">Product Details</string>
    <string name="shoppingCart">Shopping Cart</string>
    <string name="yourShoppingCart">Your Shopping Cart</string>
    <string name="subTotal">Sub-Total:</string>
    <string name="tax">Tax:</string>
    <string name="total">Total:</string>
    <string name="submitOrder">Submit Order</string>
    <string name="title_activity_shopping_history">ShoppingHIstoryActivity</string>
    <string name="myShoppingHistory">Your Shopping History</string>
    <string name="title_activity_employee_evaluation">EmployeeEvaluation</string>
    <string name="title_activity_leave_request">LeaveRequest</string>
    <string name="dailyValues">Daily Values</string>
    <string name="title_activity_forgot_password">forgot_password</string>



    <string name="btnForgotPasswordSendEmail">Send Email</string>
    <string name="btnForgotPasswordCalcel">Cancel</string>
    <string name="title_activity_progress_report">ProgressReport</string>
    <string name="title_activity_quaterly_sales">QuaterlySales</string>
    <string name="title_activity_annual_sales">AnnualSales</string>

    <!-- User Profile Ends -->

    <string-array name="Sobey_Store">
        <item></item>
    </string-array>


    <!-- User Profile Ends --></resources>



