<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/produce_bg_alt"
    tools:context="com.easygo.rbcdev.easygo.ShoppingHome">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent_white"
        android:orientation="vertical">

        <com.easygo.rbcdev.easygo.widgets.Header
            android:id="@+id/header"
            style="@style/Header"
            android:orientation="horizontal"
            custom:headerTitle="@string/app_title"
            custom:rightIcon="@drawable/icon_settings"
            />

        <TextView
            android:id="@+id/txtGreeting"
            style="@style/Greeting"
            android:text="Welcome Back, User" />

        <TextView
            android:id="@+id/txtInstructions"
            style="@style/Instructions"
            android:text="@string/shoppingOptions" />

        <Button
            android:id="@+id/btnStartShopping"
            style="@style/BusinessButton"
            android:text="@string/startShopping"
            android:layout_margin="15dp" />

        <Button
            android:id="@+id/btnLoadCart"
            style="@style/BusinessButton"
            android:text="@string/loadShoppingCart"
            android:layout_margin="15dp" />

        <Button
            android:id="@+id/btnCheckOut"
            style="@style/BusinessButton"
            android:text="@string/checkOut"
            android:layout_margin="15dp" />

        <Button
            android:id="@+id/btnLogOut"
            style="@style/BusinessButton"
            android:text="@string/logOut"
            android:layout_margin="15dp" />

    </LinearLayout>

</RelativeLayout>
