<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/produce_bg_alt"
    tools:context="com.easygo.rbcdev.easygo.Settings">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent_white"
        android:orientation="vertical" >

        <com.easygo.rbcdev.easygo.widgets.Header
            android:id="@+id/header"
            style="@style/Header"
            android:orientation="horizontal"
            custom:leftIcon="@drawable/icon_back"
            custom:headerTitle="@string/settings"
            />

        <Button
            android:id="@+id/btnProfile"
            style="@style/SettingsButton"
            android:text="@string/profile" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:background="@drawable/list_divider"/>

        <Button
            android:id="@+id/btnShoppingHistory"
            style="@style/SettingsButton"
            android:text="@string/history" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:background="@drawable/list_divider"/>

        <Button
            android:id="@+id/btnCart"
            style="@style/SettingsButton"
            android:text="@string/viewCart" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:background="@drawable/list_divider"/>

        <Button
            android:id="@+id/btnLogOutSettings"
            style="@style/SettingsButton"
            android:text="@string/logOut" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:background="@drawable/list_divider"/>
    </LinearLayout>

</RelativeLayout>
