<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <com.easygo.rbcdev.easygo.widgets.Header
        android:id="@+id/header"
        style="@style/Header"
        android:orientation="horizontal"
        custom:headerTitle="@string/app_title" />


    <LinearLayout
        android:background="@drawable/white_rounded_background"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/loginTitle"
            style="@style/LoginTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/txtUsername"
            style="@style/EditTextUsername" />

        <EditText
            android:id="@+id/txtPassword"
            style="@style/EditTextPassword" />

        <Button
            android:id="@+id/btnSignIn"
            style="@style/BusinessButton"
            android:text="@string/SignIn"
            android:layout_margin="15dp" />

        <TextView
            android:id="@+id/txtLoginRegister"
            style="@style/LinkText"
            android:text="@string/txtRegister"/>

        <TextView
            android:id="@+id/txtLoginForgotPassword"
            style="@style/LinkText"
            android:text="@string/txtForgotPassword"/>

    </LinearLayout>

</RelativeLayout>
