<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/produce_bg_alt"
    tools:context="com.easygo.rbcdev.easygo.Settings">

    <com.easygo.rbcdev.easygo.widgets.Header
        android:id="@+id/header"
        style="@style/Header"
        android:orientation="horizontal"
        custom:leftIcon="@drawable/icon_back"
        custom:headerTitle="@string/shoppingCart"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/white_rounded_background"
        android:layout_below="@+id/header"
        android:layout_margin="10dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/shoppingCartTitle"
            android:text="@string/yourShoppingCart"
            android:layout_centerHorizontal="true"
            android:textSize="25sp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:fontFamily="sans-serif"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Spinner
            android:layout_below="@+id/shoppingCartTitle"
            android:layout_above="@+id/emptyList"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:id="@+id/StoreList"
            android:layout_margin="15dp"/>

        <TextView
            android:id="@+id/emptyList"
            style="@style/LoginTitle"
            android:visibility="gone"
            android:text="Your Cart Is Empty"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <ListView
            android:layout_above="@+id/cartDivider"
            android:layout_below="@+id/StoreList"
            android:layout_height="fill_parent"
            android:layout_width="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:id="@+id/lstCartItems" />

        <View
            android:layout_above="@+id/cartSubTotalField"
            android:id="@+id/cartDivider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="10dp"
            android:background="@drawable/list_divider"/>

        <com.easygo.rbcdev.easygo.widgets.CustomField
            android:layout_above="@+id/cartTaxField"
            android:id="@+id/cartSubTotalField"
            style="@style/ItemField"
            custom:label="@string/subTotal" >
        </com.easygo.rbcdev.easygo.widgets.CustomField>

        <com.easygo.rbcdev.easygo.widgets.CustomField
            android:layout_above="@+id/itemTotalField"
            android:id="@+id/cartTaxField"
            style="@style/ItemField"
            custom:label="@string/tax" >
        </com.easygo.rbcdev.easygo.widgets.CustomField>

        <com.easygo.rbcdev.easygo.widgets.CustomField
            android:layout_above="@+id/btnSubmit"
            android:id="@+id/itemTotalField"
            style="@style/ItemField"
            custom:label="@string/total" >
        </com.easygo.rbcdev.easygo.widgets.CustomField>

        <Button
            android:layout_alignParentBottom="true"
            android:id="@+id/btnSubmit"
            style="@style/BusinessButton"
            android:text="@string/submitOrder"
            android:layout_margin="15dp" />

    </RelativeLayout>

</RelativeLayout>
