<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".MainActivity">

    <com.easygo.rbcdev.easygo.widgets.Header
        android:id="@+id/header"
        style="@style/Header"
        android:orientation="horizontal"
        custom:headerTitle="@string/app_title" />

    <LinearLayout
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_below="@id/header"
        android:orientation="vertical"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp">
        <Button
            android:id="@+id/btnBusiness"
            style="@style/BusinessButton"
            android:text="@string/btnBusiness"
            android:layout_marginBottom="40dp"
            android:layout_marginTop="30dp"/>

        <Button
            android:id="@+id/btnCustomer"
            style="@style/BusinessButton"
            android:text="@string/btnCustomer"  />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/sobeys"
            android:alpha="0.2"
            android:layout_alignParentBottom="true"
            android:paddingTop="30dp"
            android:id="@+id/logo" />

    </LinearLayout>

</RelativeLayout>
