<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/produce_bg_alt"
    tools:context="com.easygo.rbcdev.easygo.Settings">

    <com.easygo.rbcdev.easygo.widgets.Header
        android:id="@+id/header"
        style="@style/Header"
        android:orientation="horizontal"
        custom:rightIcon="@drawable/icon_settings"
        custom:headerTitle="Product Details"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/white_rounded_background"
        android:layout_below="@+id/header"
        android:layout_margin="10dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/productDetailsTitle"
            android:text="Product Title Here"
            android:textSize="25sp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:fontFamily="sans-serif"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:src="@drawable/icon_item_placeholder"/>

        <com.easygo.rbcdev.easygo.widgets.CustomField
            android:id="@+id/itemPriceField"
            style="@style/ItemField"
            custom:label="@string/priceLabel" />

        <com.easygo.rbcdev.easygo.widgets.CustomField
            android:id="@+id/itemCategoryField"
            style="@style/ItemField"
            custom:label="@string/categoryLabel" />

        <com.easygo.rbcdev.easygo.widgets.CustomField
            android:id="@+id/itemUnitField"
            style="@style/ItemField"
            custom:label="@string/unitsLabel" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:src="@drawable/list_divider"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.7"
                android:orientation="vertical">
                <com.easygo.rbcdev.easygo.widgets.CustomField
                    android:id="@+id/itemServingSizeField"
                    style="@style/ItemField"
                    custom:label="@string/servingSize" />

                <com.easygo.rbcdev.easygo.widgets.CustomField
                    android:id="@+id/itemCalories"
                    style="@style/ItemField"
                    custom:label="@string/calories" />
            </LinearLayout>
            <RelativeLayout
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_weight="0.3">
                <ImageView
                    android:id="@+id/btnNutritionIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/icon_item_placeholder"/>
            </RelativeLayout>

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>
